# bernard-rs

./: .gitignore  Cargo.toml  README.md  build.rs  diesel.toml
.github/workflows/: test.yml
bernard/: Cargo.toml
bernard-cli/: Cargo.toml
bernard-cli/src/: main.rs
bernard/src/: auth.rs  database.rs  fetch.rs  lib.rs  model.rs  schema.patch  schema.rs
bernard/src/fetch/: auth.rs  changes.rs  content.rs  drive.rs  page_token.rs
bernard/src/model/: drive.rs  file.rs  folder.rs  path.rs
bernard/src/schema/: generated.rs  mod.rs
examples/: basic.rs  tracing.rs
migrations/: 20210514180937_initial.sql  20211019195924_trashed-paths.sql
migrations/2021-04-07-181708_folders/: down.sql  up.sql
src/: changes.rs  database.rs  fetch.rs  lib.rs
src/fetch/: auth.rs  changes.rs  content.rs  drive.rs  mod.rs
src/model/: drive.rs  file.rs  folder.rs  mod.rs  path.rs
