[package]
name = "bernard-cli"
version = "0.1.0"
authors = ["Storm Timmermans <stormtimmermans@icloud.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
bernard = { path = "../bernard" }
clap = "3.0.0-beta.2"
colored = "2"
shadow-rs = "0.5"
tokio = { version = "1", features = ["full"] }
# Can be removed once https://github.com/tokio-rs/tracing/issues/1309 is resolved.
tracing-subscriber = { version = "0.3", git = "https://github.com/tokio-rs/tracing" }
tracing = { version = "0.2", git = "https://github.com/tokio-rs/tracing" }

[build-dependencies]
shadow-rs = "0.5"