[package]
name = "bernard"
version = "0.1.0"
authors = ["Storm Timmermans <stormtimmermans@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backoff = { version = "0.3.0", features = ["tokio"] }
chrono = { version="0.4.19", features = ["serde"] }
itertools = "0.10.0"
jsonwebtoken = "7"
reqwest = { version = "0.11", features = ["json"] }
ring = "0.16.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
snafu = { version = "0.6.10" }
tap = "1"
tokio = { version = "1", features = ["full"] }
# Can be removed once https://github.com/tokio-rs/tracing/issues/1309 is resolved.
tracing = { version = "0.2", git = "https://github.com/tokio-rs/tracing" }

[dependencies.diesel]
git = "https://github.com/diesel-rs/diesel"
features = ["sqlite"]
version = "2.0"

[dependencies.diesel_migrations]
git = "https://github.com/diesel-rs/diesel"
version = "2.0"